[package]
name = "run-down"
version = "0.1.0"
authors = ["Brian Gianforcaro <b.gianfo@gmail.com>"]
keywords = ["rundown", "protection", "synchronization", "reference count"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/bgianfo/rust-run-down"
license = "MIT"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bgianfo/rust-run-down", branch = "master" }

[dependencies]
bitflags = "1.2.1"
lazy-init = "0.3.0"
rsevents = "0.2.0"

[dev-dependencies]
assert-impl = "0.1.3"
pretty_assertions = "0.6"
doc-comment = "0.3.1"
