[package]
name = "run-down"
version = "0.1.0"
description = "An implementation of run-down protection in rust."
authors = ["Brian Gianforcaro <b.gianfo@gmail.com>"]
keywords = ["rundown", "protection", "synchronization", "reference-count"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/bgianfo/rust-run-down"
license = "MIT"
categories = ["concurrency", "memory-management"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bgianfo/rust-run-down", branch = "master" }

[dependencies]
bitflags = "1.2.1"
lazy-init = "0.3.0"
rsevents = "0.2.0"
# See: https://github.com/rust-lang/rust/issues/45599
doc-comment = "0.3.1"

[dev-dependencies]
pretty_assertions = "0.6"
